@@ -12,25 +12,19 @@ import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.SignedJWT;
 import com.nimbusds.jwt.proc.ConfigurableJWTProcessor;
 import com.nimbusds.jwt.proc.DefaultJWTProcessor;
+import java.text.ParseException;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
 import org.springframework.cloud.gateway.filter.GlobalFilter;
 import org.springframework.core.Ordered;
-import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.server.reactive.ServerHttpRequest;
 import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
-
-import java.text.ParseException;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.logging.Logger;
-
-import static org.springframework.cloud.gateway.filter.WebClientWriteResponseFilter.WRITE_RESPONSE_FILTER_ORDER;
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 
 @Component
@@ -40,31 +34,30 @@ public class JwtHeaderAuthenticationFilter implements GlobalFilter, Ordered {
     public static final String BEARER_PREFIX = "Bearer ";
     @Value("${token.signing.key}")
     private String jwtSigningKey;
+
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
         ServerHttpRequest request = exchange.getRequest();
         var list = request.getHeaders().getOrEmpty(AUTHORIZATION);
-        if (list.isEmpty())
+        if (list.isEmpty()) {
             return chain.filter(exchange);
-        else if (!list.get(0).startsWith(BEARER_PREFIX)) {
+        } else if (!list.getFirst().startsWith(BEARER_PREFIX)) {
             ServerHttpResponse response = exchange.getResponse();
             response.setStatusCode(HttpStatus.UNAUTHORIZED);
             return response.setComplete();
         }
-        String token = list.get(0).substring(BEARER_PREFIX.length());
+        String token = list.getFirst().substring(BEARER_PREFIX.length());
         try {
             var parseResult = parseToken(token);
             exchange.getRequest().mutate()
                     .header("username", parseResult.username())
                     .header("authorities", String.join(" ", parseResult.authorities()))
                     .build();
-        }
-        catch (BadJOSEException e) {
+        } catch (BadJOSEException e) {
             ServerHttpResponse response = exchange.getResponse();
             response.setStatusCode(HttpStatus.UNAUTHORIZED);
             return response.setComplete();
-        }
-        catch (JOSEException | ParseException e) {
+        } catch (JOSEException | ParseException e) {
             ServerHttpResponse response = exchange.getResponse();
             response.setStatusCode(HttpStatus.BAD_REQUEST);
             return response.setComplete();
@@ -89,9 +82,10 @@ public class JwtHeaderAuthenticationFilter implements GlobalFilter, Ordered {
         return new TokenParseResult(username, roles);
     }
 
+    @SuppressWarnings("checkstyle:MagicNumber")
     @Override
     public int getOrder() {
-        return 22 ;
+        return 22;
     }
 
     private record TokenParseResult(String username, List<String> authorities){
